# stelaro

./: Cargo.toml  README.md  input.stelo  t.stelo
.github/workflows/: mdbook.yml
compiler/: lib.rs
compiler/common/: error.rs  mod.rs  symbol.rs
compiler/stelalo_ast/: token.rs
compiler/stelaro_ast/: token.rs
compiler/stelaro_common/: mod.rs  source_map.rs  span.rs
compiler/stelaro_lexer/: errors.rs  lexer.rs  mod.rs
compiler/stelaro_parse/: errors.rs  parser.rs
compiler/steralo_lexer/: cursor.rs  errors.rs  lexer.rs  mod.rs  token.rs
compiler/steralo_parse/: parser.rs
docs/: book.toml
docs/src/: SUMMARY.md  chapter_1.md
src/: lib.rs  main.rs  session.rs
src/stelaro_ast/: ast.rs  mod.rs  node_id.rs  token.rs  ty.rs  visit.rs
src/stelaro_ast_lowering/: block.rs  expr.rs  index.rs  item.rs  mod.rs  pat.rs  path.rs
src/stelaro_common/: arena.rs  def.rs  def_id.rs  delayed_map.rs  diagnostics.rs  error_core.rs  fatal_error.rs  fingerprint.rs  hashes.rs  idx.rs  index_vec.rs  lit_utils.rs  map.rs  mod.rs  slice.rs  sorted_map.rs  source_map.rs  span.rs  stable_hasher.rs  stack.rs  symbol.rs  tests.rs  unhash.rs  visit_utils.rs
src/stelaro_context/: context.rs  mod.rs  sir_map.rs
src/stelaro_diagnostic/: diag.rs  emitter.rs  mod.rs
src/stelaro_diagnostics/: diag.rs  emitter.rs  mod.rs
src/stelaro_interface/: interface.rs  mod.rs  passes.rs
src/stelaro_lexer/: cursor.rs  diagnostics.rs  errors.rs  lexer.rs  mod.rs
src/stelaro_macros/: Cargo.toml  lib.rs  newtype.rs
src/stelaro_parse/: errors.rs  (+9 more)
tests/: lexer_tests.rs  parser_tests.rs
(+31 files in other folders)
