[package]
name = "stelaro"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
ariadne = "0.5.1"
bumpalo = "3.18.1"
indexmap = "2.9.0"
rustc-stable-hash = "0.1.2"
scoped-tls = "1.0.1"

[dev-dependencies]
insta = { version = "1.43.1", features = ["glob"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
